fixed overflow too many boards = scroll

--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,8 @@ body {
         position:absolute;
         top: 0;
         width: 15.50%;
+        max-height: 93vh;
+        overflow-y: scroll;
 
     }
     .boardnames a {
